SRE/KubernetesYT/manifest/06-clusterIPService.yml
#Despliega un pod con 3 replicas de una app de google
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello #label and name for label
  template:
    metadata:
      labels:
        role: hello
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080

#Servicio Cluster IP, no lleva type a diferencia del node port service(ver 07-nodePortService.yml)
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 8080        #Tiene el puerto 8080 y apunta al puerto 8080 del contenedor
    targetPort: 8080
  selector:           #Con el selector por tag role = hello sabe que tiene que redirigir el tráfico a uno de los pods con esa etiqueta
    role: hello

#Si una vez que este levantado hacemos kubectl describe svc hello
#En los endpoints estarán las 3 ip asignadas a los 3 contedores creados
#Uso desde otro pod curl http://hello:8080
