SRE/KubernetesYT/manifest/08-loadBalancerService.yml
#Despliega un pod con 3 replicas de una app de google
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello #label and name for label
  template:
    metadata:
      labels:
        role: hello
    spec:
      containers:
        - name: hello
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080

#Servicio LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    role: hello

#Si una vez que este levantado hacemos kubectl describe svc hello
#El servicio tendrá una ip publica a la que podemos atacar, es parecido al ip port pero mejor porque no tenemos que dar la ip del nodo
#Uso desde internet curl http://ipExternaSercio:8080 -> te redirige a cualquier nodo pod de los 3
